Add import check with importlib

--- a/src/logging.yaml
+++ b/src/logging.yaml
@@ -45,7 +45,7 @@ handlers:
 
 root:
     level: NOTSET
-    handlers: [info_file_handler,error_file_handler]
+    handlers: [console,info_file_handler,error_file_handler]
     propogate: yes
 
 loggers:
