--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/python,ltspice
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,ltspice
 
@@ -14,7 +13,7 @@
 *.fft
 
 # Netlist
-*.net
+#*.net
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
